Fixed various layout issues

--- a/src/public/css/style.less
+++ b/src/public/css/style.less
@@ -58,13 +58,20 @@ body {
 	opacity:1.0;
 }
 
-#meta .thumbs {
-	width: 284px;
-	margin-left: -4px;
-	margin-top: -4px;
+#meta {
+	width: 285px;
+	margin-top: -5px;
 }
 
-#meta .thumb ws
+#meta .thumbs {
+	margin: 0;
+}
+
+#meta .thumb {
+	width: 90px;
+	height: 90px;
+	margin: 5px 5px 0 0;
+}
 
 #meta .more {
 	display: inline-block;
@@ -313,7 +320,7 @@ input {
 
 #meta input {
 	border: 1px solid #ddd;
-	width: 100%;
+	width: 278px;
 }
 
 #meta h4 {
